improved the evaluation methods and made them into functions to fix DRY

--- a/Code/team_seasonal_rating_scrape.ipynb
+++ b/Code/team_seasonal_rating_scrape.ipynb
@@ -11,6 +11,7 @@
     "import requests\n",
     "import random\n",
     "\n",
+    "# List of URLs to scrape with the year as the key and the URL as the value\n",
     "pages_to_scrape = {\"2022-2023\": \"https://sofifa.com/teams?type=all&lg%5B0%5D=13&r=230054&set=true&showCol%5B0%5D=oa&showCol%5B1%5D=sa&showCol%5B2%5D=at&showCol%5B3%5D=md&showCol%5B4%5D=df&col=oa&sort=desc&hl=en-US\",\n",
     "                   \"2021-2022\": \"https://sofifa.com/teams?type=all&lg%5B0%5D=13&r=220069&set=true&showCol%5B0%5D=oa&showCol%5B1%5D=sa&showCol%5B2%5D=at&showCol%5B3%5D=md&showCol%5B4%5D=df&col=oa&sort=desc&hl=en-US\",\n",
     "                   \"2020-2021\": \"https://sofifa.com/teams?type=all&lg%5B0%5D=13&r=210064&set=true&showCol%5B0%5D=oa&showCol%5B1%5D=sa&showCol%5B2%5D=at&showCol%5B3%5D=md&showCol%5B4%5D=df&col=oa&sort=desc&hl=en-US\",\n",
@@ -31,7 +32,7 @@
     "    else:\n",
     "        print('Unknown error!\\n')\n",
     "\n",
-    "# Define a list of user agents we can rotate through\n",
+    "# Define a list of user agents we can rotate through to avoid getting blocked \n",
     "user_agent_list = [\n",
     "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.82 Safari/537.36',\n",
     "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Safari/537.36 Edg/87.0.664.75',\n",
@@ -190,8 +191,10 @@
     }
    ],
    "source": [
+    "# Global list to store the data\n",
     "seasonal_team_rating = []\n",
     "\n",
+    "# Loop through the pages to scrape\n",
     "for season, page in pages_to_scrape.items():\n",
     "    # Pick a random user agent\n",
     "    headers = {\"User-Agent\": user_agent_list[random.randint(0, len(user_agent_list)-1)]}\n",
